# flutter-go-android

android/app/: CMakeLists.txt  build.gradle  tzzlib.h
android/app/src/main/kotlin/com/example/weather_ffi/: MainActivity.kt
lib/: main.dart
